Fix pre wrap

--- a/sass/layout/_content.scss
+++ b/sass/layout/_content.scss
@@ -2,7 +2,7 @@
   * Styles for the main content area of all pages
 */
 pre {
-  display: none;
+  // display: none;
 }
 
 .site-content {
